| VIEWS | NotfoundView : add content and style. Worksview and infoView : and wheel event for horizontal scroll. | COMPONENTS | infosWrapper : change styles. TheContact : add attribute for binding and autocompletion. Add custom event to stop scrolling page when in textarea. | CSS | add rules for scroll snap

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,7 @@
   overflow-y: hidden;
   scrollbar-width: thin;
   scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
   display: flex;
   flex-flow: row;
 }
